# Lightning-sample

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/: config.yaml
conf/datamodule/: cifar10.yaml  mnist.yaml  mnist_gan.yaml
conf/experiment/: cifar10_simple.yaml  gan.yaml
conf/litmodule/: cifar10_simple.yaml  gan.yaml
src/: train.py
src/datamodule/: mnist_datamodule.py
src/litmodule/: __init__.py  lit_gan.py
src/model/: gan.py
